--- a/sponsor.css
+++ b/sponsor.css
@@ -175,8 +175,8 @@ figure.snip0026 {
   
   /* margin-right: 50px; */
   /* min-width: 220px; */
-  width: 350px;
-  height: 350px;
+  /* width: 350px;
+  height: 350px; */
   /* width: 100%; */
   /* height: 100%; */
   background: #161616;
@@ -293,6 +293,12 @@ body {
     margin-bottom: 100px;
 }
 
+/* figure.snip0026 img{
+  width: 40px;
+  height: 400px;
+  border-radius: 3%;
+} */
+
 .link{
     font-size: 1.1em;
     /* margin-bottom: 500px; */
@@ -323,5 +329,9 @@ body {
   grid-area: fig7;
   /* top: 100px; */
   
+}
+
+.name_logo{
+  width: 60%;
 }
 }
