--- a/sponsor.css
+++ b/sponsor.css
@@ -194,8 +194,9 @@ figure.snip0026 h2 {
 }
 
 figure.snip0026 h2 span {
-  font-weight: 750;
-  font-size: 0.5 em;
+  font-weight: 700;
+  /* font-size: 0.3 em; */
+  justify-content: center;
   
   /* width: 100%; */
 }
@@ -346,4 +347,98 @@ body {
   
 }
 
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  figure.snip0026 {
+    font-family: 'Raleway', Arial, sans-serif;
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+    margin: 60px;
+    
+    /* margin-right: 50px; */
+    /* min-width: 220px; */
+    /* width: 350px;
+    height: 350px; */
+    /* width: 100%; */
+    /* height: 100%; */
+    background: #161616;
+    text-align: center;
+    object-fit: cover; 
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 3%;
+  
+  }
+  
+  figure.snip0026 h2 {
+    font-size: 0.8em;
+  }
+  
+  figure.snip0026 h2 span {
+    font-weight: 700;
+    /* font-size: 1em; */
+    justify-content: center;
+    
+    /* width: 100%; */
+  }
+  
+  .grid{
+    /* margin-left: 45px; */
+    display: grid;
+    justify-items: center;
+  
+    align-items:center;
+    grid-template-areas:
+      'fig1 fig2'
+      'fig3 fig4'
+      'fig5 fig6'
+      'fig7 .';
+  
+    grid-template-rows: 200px 200px 200px 200px;
+    grid-template-columns: 200px 200px;
+  
+    grid-row-gap: 100px;
+    grid-column-gap: 100px;
+
+  }
+    .name_logo{
+      width: 250px !important;
+      height: 50px !important;
+      /* display: flex !important; */
+      align-items: center !important;
+    }
+    
+  
+  
+  
+  .fig1{
+     grid-area:fig1;
+     /* margin: 100px; */
+  
+  }
+  .fig2{
+     grid-area:fig2;
+  }
+  .fig3{
+     grid-area:fig3;
+     
+  }
+  .fig4{
+     grid-area:fig4;
+  }
+  .fig5{
+     grid-area:fig5;
+  }
+  .fig6{
+     grid-area:fig6;
+  }
+  .fig7{
+    grid-area: fig7;
+    /* justify-content: center; */
+    /* top: 100px; */
+    
+  }
 }
